--- a/src/main/java/br/eti/carloslima/clinformatica/gui/ServiceOrderScreen.form
+++ b/src/main/java/br/eti/carloslima/clinformatica/gui/ServiceOrderScreen.form
@@ -92,8 +92,6 @@
                                       <EmptySpace type="separate" max="-2" attributes="0"/>
                                       <Component id="btnPesquisa" min="-2" max="-2" attributes="0"/>
                                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                                      <Component id="btnEditar" min="-2" max="-2" attributes="0"/>
-                                      <EmptySpace type="separate" max="-2" attributes="0"/>
                                       <Component id="btnDeletar" min="-2" max="-2" attributes="0"/>
                                       <EmptySpace type="separate" max="-2" attributes="0"/>
                                       <Component id="btnImprimir" min="-2" max="-2" attributes="0"/>
@@ -163,7 +161,6 @@
                       <Group type="103" groupAlignment="1" attributes="0">
                           <Component id="btnSave" min="-2" max="-2" attributes="0"/>
                           <Component id="btnPesquisa" min="-2" max="-2" attributes="0"/>
-                          <Component id="btnEditar" min="-2" max="-2" attributes="0"/>
                           <Component id="btnDeletar" min="-2" max="-2" attributes="0"/>
                           <Component id="btnImprimir" min="-2" max="-2" attributes="0"/>
                           <Component id="btnNovo" min="-2" max="-2" attributes="0"/>
@@ -433,7 +430,7 @@
             <Component class="javax.swing.JButton" name="btnSave">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/images/save.png"/>
+                  <Image iconType="3" name="/images/accept_page.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Salvar"/>
                 <Property name="toolTipText" type="java.lang.String" value="Salvar"/>
@@ -448,7 +445,7 @@
             <Component class="javax.swing.JButton" name="btnPesquisa">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/images/search2.png"/>
+                  <Image iconType="3" name="/images/search_page.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Pesquisar"/>
                 <Property name="toolTipText" type="java.lang.String" value="pesquisar"/>
@@ -458,21 +455,6 @@
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnPesquisaActionPerformed"/>
-              </Events>
-            </Component>
-            <Component class="javax.swing.JButton" name="btnEditar">
-              <Properties>
-                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/images/edit.png"/>
-                </Property>
-                <Property name="text" type="java.lang.String" value="Editar"/>
-                <Property name="toolTipText" type="java.lang.String" value="Editar"/>
-                <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-                  <Color id="Cursor em Forma de M&#xe3;o"/>
-                </Property>
-              </Properties>
-              <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnEditarActionPerformed"/>
               </Events>
             </Component>
             <Component class="javax.swing.JButton" name="btnDeletar">
@@ -493,7 +475,7 @@
             <Component class="javax.swing.JButton" name="btnImprimir">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/images/Print.png"/>
+                  <Image iconType="3" name="/images/print_1.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Imprimir"/>
                 <Property name="toolTipText" type="java.lang.String" value="Imprimir"/>
@@ -510,7 +492,7 @@
             <Component class="javax.swing.JButton" name="btnNovo">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/images/new_page_document.png"/>
+                  <Image iconType="3" name="/images/new_page.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Novo"/>
                 <Property name="toolTipText" type="java.lang.String" value="Nova Ordem de Servi&#xe7;o"/>
