--- a/src/main/java/br/eti/carloslima/clinformatica/gui/ServiceOrderScreen.form
+++ b/src/main/java/br/eti/carloslima/clinformatica/gui/ServiceOrderScreen.form
@@ -483,6 +483,9 @@
                   <Color id="Cursor em Forma de M&#xe3;o"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnImprimirActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JTextField" name="txtValorTotal">
               <Properties>
